package org.command.demo3;

public class BoardScreen {
    public void open() {
        System.out.println("BoardScreen open...");
    }

    public void create() {
        System.out.println("BoardScreen create...");
    }

    public void edit() {
        System.out.println("BoardScreen edit...");
    }
}
