package org.command.demo3;

public abstract class Command {
    public abstract void execute();
}
